tests/valid/definite/Define_Valid_2.whiley
define dr2point as {real x, real y}

void System::main([string] args):
     dr2point p
     p = {x:1.0,y:2.23}
     print str(p)

